stargas/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Customer_s_Email_Address__c</fullName>
        <defaultValue>&quot;regina.trimble@silverlinecrm.com&quot;</defaultValue>
        <label>Customer&apos;s Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dead_Lead__c</fullName>
        <inlineHelpText>If customer does not want to be contacted email Marketing Dept and SP Sales Admin with lead #, name, address and phone #.   MUST INCLUDE ALL INFO.</inlineHelpText>
        <label>Dead Lead?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting For Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved After Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined After Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bypassed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliver_By_On__c</fullName>
        <label>Deliver By/On</label>
        <picklist>
            <picklistValues>
                <fullName>Deliver By</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver On</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Address_text__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_City2__c</fullName>
        <label>Delivery City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_City_State_Zip__c</fullName>
        <formula>Delivery_City__c &amp; &quot;, &quot; &amp; Delivery_State_Province__c &amp; &quot; &quot; &amp;  Delivery_Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery City/State/Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_City__c</fullName>
        <formula>Account.PersonContact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery City (From Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_verify__c</fullName>
        <formula>Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_First_Name__c</fullName>
        <label>zDelivery First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Last_Name__c</fullName>
        <label>zDelivery Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Option__c</fullName>
        <label>Delivery Option</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>LoadToLoad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_State2__c</fullName>
        <label>Delivery State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_State_Province__c</fullName>
        <formula>Account.PersonContact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Street2__c</fullName>
        <label>Delivery Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Street__c</fullName>
        <formula>Account.PersonContact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Zip2__c</fullName>
        <label>Delivery Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Zip_Postal_Code__c</fullName>
        <formula>Account.PersonContact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Zone_Oppty__c</fullName>
        <formula>Territory__r.Delivery_Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Depot</inlineHelpText>
        <label>Depot</label>
        <picklist>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paterson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Contract Description Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deviation_verify__c</fullName>
        <formula>(  Variable__c -  Fixed_Price_verify__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deviation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Different_Credit_Name__c</fullName>
        <label>Different Credit Name Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Different_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Different Credit Name?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Negative__c</fullName>
        <formula>Discount__c * -1</formula>
        <label>Discount (Negative #)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount ($)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>DoNotCall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotSold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_GM__c</fullName>
        <formula>Territory__r.Division__r.GM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division GM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <formula>Territory__r.Division__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Oil_Pricing_Group__c</fullName>
        <formula>Territory__r.Division__r.Division_Oil_Pricing_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Oil Pricing Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>hyperlink(&quot;/&quot;&amp;  Territory__r.Division__c , Territory__r.Division__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_want_CARE__c</fullName>
        <label>Do you want CARE?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Unit__c</fullName>
        <description>Is the system currently operating?</description>
        <inlineHelpText>Determine if the customer&apos;s equipment is working.</inlineHelpText>
        <label>Down Unit</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dryer_Clothes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dryer - Clothes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ductwork__c</fullName>
        <description>Does the customer already have ductwork in the home?</description>
        <inlineHelpText>Determine if the customer has existing ductwork in the home.</inlineHelpText>
        <label>Ductwork</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Ductwork</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E3_sync_log__c</fullName>
        <description>Results of sync actions made by E3 connector.</description>
        <label>E3_sync_log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ES_Company__c</fullName>
        <description>Copies Service_Company_Oppty__c to ES-Company for the EchoSign Template ID formula.</description>
        <inlineHelpText>Copies Service_Company_Oppty__c to ES-Company for the EchoSign Template ID formula.</inlineHelpText>
        <label>ES-Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_State__c</fullName>
        <description>Copies Delivery_State_Province__c to ES-State for the EchoSign Template ID formula.</description>
        <label>ES-State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Echosign_Template_ID_Calculated__c</fullName>
        <description>if( Service_Company_Oppty__c = &quot;Petro Home Services&quot;,

case(  Delivery_State_Province__c ,&quot;MD&quot;,&quot;a0RG000000U3SrS&quot;,&quot;CT&quot;, &quot;a0RG000000U3SrS&quot;, &quot;NJ&quot;, &quot;a0RG000000U3SrS&quot;, &quot;NY&quot;, &quot;a0RG000000U3SrS&quot;, &quot;DC&quot;, &quot;INSERTTEMPLATEID&quot;,&quot;a0RG000000U3SrS&quot;),


if(Service_Company_Oppty__c = &quot;Meenan&quot;,

case(  Delivery_State_Province__c ,&quot;MD&quot;,&quot;a0RG000000U3SrS&quot;,&quot;CT&quot;, &quot;a0RG000000U3SrS&quot;, &quot;NJ&quot;, &quot;a0RG000000U3SrS&quot;, &quot;NY&quot;, &quot;a0RG000000U3SrS&quot;, &quot;DC&quot;, &quot;INSERTTEMPLATEID&quot;,&quot;a0RG000000U3SrS&quot;),

&quot;a0RG000000U3SrS&quot;))</description>
        <formula>if(ES_Company__c =&quot;Petro Home Services&quot;,
case(ES_State__c,&quot;MD&quot;,&quot;a0RJ000000A4TXd&quot;,&quot;CT&quot;,&quot;a0RJ000000A4TXd&quot;,&quot;NJ&quot;,&quot;a0RJ000000A4TXd&quot;,&quot;NY&quot;,&quot;a0RJ000000A3tSv&quot;,&quot;DC&quot;,&quot;a0RJ000000A4Tp0&quot;,&quot;PA&quot;,&quot;a0RJ000000A4UHi&quot;,&quot;RI&quot;,&quot;a0RJ000000A4UC8&quot;,&quot;VA&quot;,&quot;a0RJ000000A4USF&quot;,&quot;MA&quot;,&quot;a0RJ000000A4WLA&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Meenan&quot;,
case(ES_State__c,&quot;NY&quot;,&quot;a0RJ000000A4WL0&quot;,&quot;PA&quot;,&quot;a0RJ000000A4WJb&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Atlas Glenmor&quot;,
case(ES_State__c,&quot;MA&quot;,&quot;a0RJ000000A4V5j&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Burke Heat&quot;,
case(ES_State__c,&quot;NY&quot;,&quot;a0RJ000000A4Vyg&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Hoffberger&quot;,
case(ES_State__c,&quot;CT&quot;,&quot;a0RJ000000A4Vbj&quot;,&quot;NJ&quot;,&quot;a0RJ000000A4Vbj&quot;,&quot;MD&quot;,&quot;a0RJ000000A4Vbj&quot;,&quot;VA&quot;,&quot;a0RJ000000A4VmH&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Leffler Energy&quot;,
case(ES_State__c,&quot;PA&quot;,&quot;a0RJ000000A4W7v&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Love Effron&quot;,
case(ES_State__c,&quot;NY&quot;,&quot;a0RJ000000A4VVD&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Patterson Energy&quot;,
case(ES_State__c,&quot;NY&quot;,&quot;a0RJ000000A4VEO&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Region Oil&quot;,
case(ES_State__c,&quot;MD&quot;,&quot;a0RJ000000A4WL5&quot;,&quot;CT&quot;,&quot;a0RJ000000A4WL5&quot;,&quot;NJ&quot;,&quot;a0RJ000000A4WL5&quot;,&quot;NOTEMPLATE&quot;),

if(ES_Company__c=&quot;Wallace Oil&quot;,
case(ES_State__c,&quot;NY&quot;,&quot;a0RJ000000A4Uhm&quot;,&quot;NOTEMPLATE&quot;),

&quot;NOTEMPLATE&quot;))))))))))</formula>
        <label>Echosign Template ID Calculated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_verify__c</fullName>
        <description>Verification Summary Section</description>
        <formula>Customer_s_Email_Address__c</formula>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energy_AccountNum__c</fullName>
        <description>The Energy account number for this opportunity&apos;s account (aka client/prospect)</description>
        <formula>Account.Energy_AccountNumLong__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Acquisition_Reason__c</fullName>
        <label>Energy Acquisition Reason</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Source__c</fullName>
        <label>Energy Source?</label>
        <picklist>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Installed__c</fullName>
        <label>Equipment Installed</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_System__c</fullName>
        <description>Does the customer want service or sales?</description>
        <inlineHelpText>Determine if the customer is looking for service or sales.</inlineHelpText>
        <label>Equipment System</label>
        <picklist>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace a part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment Interest</label>
        <picklist>
            <picklistValues>
                <fullName>A/C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C / BOILER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C / Furnace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C / HWH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C / OIL TANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C / Whole House Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Air Handler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Coil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Condenser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C - DOWN UNIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Ductless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Overhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/C Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Cleaner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquasmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbestos removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attic fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attic Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler/Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler/HWH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler/Oil Tank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler - DOWN UNIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler-GAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler-propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Usage_gal_verify__c</fullName>
        <description>Verification Summary Section</description>
        <formula>Annual_Usage_gal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Est Annual Usage (gal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Usage_Dollar__c</fullName>
        <formula>Est_Usage_Gal_number__c  *   Price_Gal_currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Usage ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Usage_Gal_number__c</fullName>
        <label>Est. Usage (Gal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Usage_gal_c__c</fullName>
        <formula>IF(TEXT(Usage_Reason__c) = &quot;Heat Only&quot;,

  IF(OR(VALUE(Territory__r.Division_Number__c) = 10, VALUE(Territory__r.Division_Number__c) = 11, VALUE(Territory__r.Division_Number__c) = 12),

    110 * VALUE(TEXT(Of_Heated_Rooms_budget_section__c)),

    130 * VALUE(TEXT(Of_Heated_Rooms_budget_section__c))),

  IF(TEXT(Usage_Reason__c) = &quot;Heat &amp; Hot Water&quot;, 

    IF(OR(VALUE(Territory__r.Division_Number__c) = 10, VALUE(Territory__r.Division_Number__c) = 11, VALUE(Territory__r.Division_Number__c) = 12),

      125 * VALUE(TEXT(Of_Heated_Rooms_budget_section__c)),

      150 * VALUE(TEXT(Of_Heated_Rooms_budget_section__c))),

    0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zEst. Usage (Gal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_1st_Delivery_Date__c</fullName>
        <formula>Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated 1st Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Gal_In_Tank__c</fullName>
        <label>Estimated Gal In Tank</label>
        <picklist>
            <picklistValues>
                <fullName>Empty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet installed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explained_Referral_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity - Oil - Summary Section</description>
        <label>Explained Referral Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filing_Fees__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Direct Cost - Filing Fees</inlineHelpText>
        <label>Filing Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fill_Location__c</fullName>
        <inlineHelpText>1 = Front Left
2 = Front Left Side
3 = Back Left Side
4 = Back Left
5 = Back Right
6 = Back Right Side
7 = Front Right Side
8 = Front Right</inlineHelpText>
        <label>Fill Location</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fill_Location_image2__c</fullName>
        <formula>IMAGE(&quot;https://cs10.salesforce.com/servlet/servlet.ImageServer?oid=00DJ0000003KlbD&amp;id=015J0000000HSAx&quot;, &quot;Fill Location&quot;, 194, 261)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fill Location (image)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fill_Location_image__c</fullName>
        <label>zFill Location</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Finance_Charge_Install__c</fullName>
        <description>Used by Installation Team. 
=IF(interest.rate&lt;&gt;0,PMT(interest.rate/12,terms.install,-financed.amount,0,0)*terms.install-financed.amount,0)</description>
        <inlineHelpText>Installation - Financing - Finance Charge</inlineHelpText>
        <label>Finance Charge - Install</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Charge__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Charge_formula__c</fullName>
        <formula>Finance_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Fee__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Financing - Finance Vendor Fee</inlineHelpText>
        <label>Finance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Vendor__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Financing - Vendor</inlineHelpText>
        <label>Finance Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>AFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financed_Amount__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Financing - Loan Financed Amount</inlineHelpText>
        <label>Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fireplace_Decorative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fireplace - Decorative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>Delivery First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_verify__c</fullName>
        <formula>IF ((Override_Fixed_Price__c &gt; 0),Override_Fixed_Price__c , Fixed_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP__c</fullName>
        <description>Used by Installation Team.</description>
        <formula>Gross_P_L_B4_Sales_Comm__c / Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installation - Gross Profit %</inlineHelpText>
        <label>GP %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Generator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Cost__c</fullName>
        <label>Gross Cost</label>
        <summarizedField>OpportunityLineItem.Total_Cost__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_P_L_B4_Sales_Comm__c</fullName>
        <formula>(Amount -  Major_Material__c -  Misc_Material__c -  Sales_Tax__c - Sub_Contract_Expense__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross P/L B4 Sales Comm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Percent__c</fullName>
        <formula>IF(Amount &gt; 0, Gross_Profit__c /  Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>Amount - Gross_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HART_Current_Address__c</fullName>
        <label>HART Current Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HART_Customer_Name__c</fullName>
        <label>HART Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HART_Date_of_Birth__c</fullName>
        <label>HART Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HART_Previous_Address__c</fullName>
        <label>HART Previous Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HART_RCD_Codes__c</fullName>
        <label>HART RCD Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HHAU_Customer_Referral__c</fullName>
        <label>HHAU Customer Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>